<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.Stampa"
    tools:showIn="@layout/activity_stampa">




    <LinearLayout
        android:id="@+id/loading_container_stampa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_marginTop="70dp"
            android:id="@+id/loading_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/design_scelta_stampante"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:textAlignment="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/Selezione_la_modalità_in_cui_preferisci_stampare"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/qr_button"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/QR_Code" />

            <Button
                android:id="@+id/list_printer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Printer_List"
                android:visibility="gone" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/CIEcheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCIECheckboxClicked"
            android:text="@string/secure_printing" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:visibility="invisible" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>